--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.25.0",
+    "mint-ui": "^2.2.13",
     "quasar-extras": "0.x",
     "quasar-framework": "^0.14.4",
     "vue": "^2.5.0",
@@ -48,11 +49,13 @@
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.0",
     "json-loader": "^0.5.7",
+    "node-sass": "^4.7.2",
     "opn": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "postcss-loader": "^1.0.0",
     "progress-bar-webpack-plugin": "^1.10.0",
     "purify-css": "^1.2.6",
+    "sass-loader": "^6.0.6",
     "shelljs": "^0.7.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
