--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "babel-runtime": "^6.25.0",
+    "chart.js": "^2.7.1",
     "mint-ui": "^2.2.13",
     "quasar-extras": "0.x",
     "quasar-framework": "^0.14.4",
     "vue": "^2.5.0",
+    "vue-chartjs": "^3.0.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
